--- a/algospeak_topic_modeling.ipynb
+++ b/algospeak_topic_modeling.ipynb
@@ -433,6 +433,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9f1c283-f099-46d4-aaf7-d2c4e6eb50b5",
+   "metadata": {},
+   "source": [
+    "I will split the corpus into three sets:\n",
+    "- The whole corpus\n",
+    "- Just posts coded 'a'\n",
+    "- Just posts coded 'm'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "6c914588-d1f9-45e5-bacd-920256f9f8ec",
@@ -521,7 +532,9 @@
    "metadata": {},
    "source": [
     "## 2 K-means clustering\n",
-    "Borrowing the plot_inertia function from [Qidu's notebook](https://github.com/Data-Science-for-Linguists-2025/Chinese-English-Code-Switching-Analysis/blob/main/notebooks/2.1_analyze_data.ipynb)"
+    "To find the ideal amount of topics for each set of data, I will use K-means clustering. When the rate of inertia decreasing slows down or increases, that means that the ideal amount of topics has been found. \n",
+    "\n",
+    "Adapting the plot_inertia function from [Qidu's notebook](https://github.com/Data-Science-for-Linguists-2025/Chinese-English-Code-Switching-Analysis/blob/main/notebooks/2.1_analyze_data.ipynb)"
    ]
   },
   {
@@ -704,7 +717,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "ffcc2fbb-65be-4e3e-9e3c-020a55a092c6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -742,7 +757,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "a532367b-d0ac-45b8-8b80-82c2533b42f9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
