--- a/coded_data_viz.ipynb
+++ b/coded_data_viz.ipynb
@@ -97,53 +97,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>And just like that, our first egg of the year!</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Y'all, please stop saying \"unalive\" and \"self-delete\" and so forth. There's no algorithm to fight here and a lot of people have the word \"suicide\" muted for a reason. The euphemisms are neither cute nor helpful.</td>\n",
+       "      <td>unalive</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Orange soda from grape</td>\n",
+       "      <td>grape</td>\n",
+       "      <td>n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>Drew sowmones oc for funsies with my boys sushi and popi \\n#art ##ocart #commissionsopen #commsopen #dmsopen #oc #digitalart #furry #furryart #furryoc #fursona #persona #mascot #sketch #coloredsketch</td>\n",
        "      <td>palm colored</td>\n",
        "      <td>o</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>First sketch request of February, have some good old seggs with Cleopatra from Shin Megami Tensei V!</td>\n",
-       "      <td>seggs</td>\n",
+       "      <th>91</th>\n",
+       "      <td>Last night tonight\\n\\n“And there were so many fewer questions\\nWhen stars were still just the holes to heaven…”\\n~Jack Johnson (2001)</td>\n",
+       "      <td>palm colored</td>\n",
+       "      <td>o</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Because most palm colored people expect especially a Black woman to mammy &amp; rescue them. Look at how they continually push Michelle Obama to run even when they know she's repeatedly said she's not running. Besides, even if she won, Congress would've been GOP. That means most of them wanted this shit</td>\n",
+       "      <td>palm colored</td>\n",
        "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>i promise i’m not trying to be a freaky frog but do yall laugh during seggs? \\n\\ni’m tryna see sumn.</td>\n",
-       "      <td>seggs</td>\n",
-       "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>Fuck you watermelon fucker. Nobody fucking asked you.</td>\n",
-       "      <td>watermelon</td>\n",
-       "      <td>n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121</th>\n",
-       "      <td>A farm worker shared this photo with us from an Arizona watermelon field . It's physically demanding work. The loader crew is responsible  for picking pick up hundreds of watermelons and loading them into the trailer. #WeFeedYou</td>\n",
-       "      <td>watermelon</td>\n",
-       "      <td>n</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                                                     text  \\\n",
-       "92                                                                                                                                                                                         And just like that, our first egg of the year!   \n",
-       "54                                                                                                                                   First sketch request of February, have some good old seggs with Cleopatra from Shin Megami Tensei V!   \n",
-       "50                                                                                                                                   i promise i’m not trying to be a freaky frog but do yall laugh during seggs? \\n\\ni’m tryna see sumn.   \n",
-       "136                                                                                                                                                                                 Fuck you watermelon fucker. Nobody fucking asked you.   \n",
-       "121  A farm worker shared this photo with us from an Arizona watermelon field . It's physically demanding work. The loader crew is responsible  for picking pick up hundreds of watermelons and loading them into the trailer. #WeFeedYou   \n",
+       "                                                                                                                                                                                                                                                                                                             text  \\\n",
+       "6                                                                                             Y'all, please stop saying \"unalive\" and \"self-delete\" and so forth. There's no algorithm to fight here and a lot of people have the word \"suicide\" muted for a reason. The euphemisms are neither cute nor helpful.   \n",
+       "67                                                                                                                                                                                                                                                                                         Orange soda from grape   \n",
+       "112                                                                                                       Drew sowmones oc for funsies with my boys sushi and popi \\n#art ##ocart #commissionsopen #commsopen #dmsopen #oc #digitalart #furry #furryart #furryoc #fursona #persona #mascot #sketch #coloredsketch   \n",
+       "91                                                                                                                                                                          Last night tonight\\n\\n“And there were so many fewer questions\\nWhen stars were still just the holes to heaven…”\\n~Jack Johnson (2001)   \n",
+       "95   Because most palm colored people expect especially a Black woman to mammy & rescue them. Look at how they continually push Michelle Obama to run even when they know she's repeatedly said she's not running. Besides, even if she won, Congress would've been GOP. That means most of them wanted this shit   \n",
        "\n",
        "            query mention_code  \n",
-       "92   palm colored            o  \n",
-       "54          seggs            a  \n",
-       "50          seggs            a  \n",
-       "136    watermelon            n  \n",
-       "121    watermelon            n  "
+       "6         unalive            m  \n",
+       "67          grape            n  \n",
+       "112  palm colored            o  \n",
+       "91   palm colored            o  \n",
+       "95   palm colored            a  "
       ]
      },
      "execution_count": 3,
@@ -451,7 +451,7 @@
    "metadata": {},
    "source": [
     "## 3 Looking at the unalive dataset\n",
-    "Coded the same way but it's just unalive now"
+    "This dataset is coded the same way, but it is only posts that contain \"unalive\"."
    ]
   },
   {
@@ -714,12 +714,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "bad99a98-932b-4557-84c8-b4cdaa075904",
+   "cell_type": "markdown",
+   "id": "ffdca384-0356-4b3c-b8ea-3d0b7e9311c2",
    "metadata": {
     "scrolled": true
    },
+   "source": [
+    "topic_by_mention = unalive_df.groupby('topic_code').mention_code.value_counts().unstack().fillna(0)\n",
+    "topic_by_mention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "39a863ca-48b9-4daf-8bc0-5143e0b2184c",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -923,12 +932,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89b6237f-9334-4b13-a870-38f63f827f9b",
+   "cell_type": "markdown",
+   "id": "d424f225-8525-40f3-94c9-bc21522b08d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "It seems that some topics are correlate strongly with some codes and not others!"
+   ]
   }
  ],
  "metadata": {
